<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="@string/menu_function"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/sin"
                android:title="@string/menu_sine"/>
            <item
                android:id="@+id/cos"
                android:title="@string/menu_cosine"/>
        </menu>
    </item>
    <item
        android:title="@string/menu_orientation"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/vertical"
                android:title="@string/menu_vertical"/>
            <item
                android:id="@+id/horizontal"
                android:title="@string/menu_horizontal"/>
        </menu>
    </item>
    <item
        android:title="@string/menu_line_mode"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/behind"
                android:title="@string/menu_behind"/>
            <item
                android:id="@+id/over"
                android:title="@string/menu_over"/>
        </menu>
    </item>
    <item
        android:id="@+id/remove"
        android:title="@string/menu_remove_10"/>
    <item
        android:id="@+id/add"
        android:title="@string/menu_add_several"/>
    <item
        android:id="@+id/toFirst"
        android:title="@string/menu_move_to_first"/>
    <item
        android:id="@+id/useDividers"
        android:checkable="true"
        android:title="@string/menu_use_dividers"/>
</menu>